added new files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
 <head>
     <title>KFC</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     </head>
     <body>
+        <div class="container">
     <header>
         <h1>About KFC</h1>
         </header>
+            <div class="row">
         <div class="oneofthefoundersofkfc">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
         <h3>One Of The Founders Of KFC</h3>
     <p>
         His name is pete harman.
@@ -26,10 +31,16 @@
         Harman relocated to Los Altos, California as the scope of his business expanded in the 1960s. 
         He lived there until his death on November 19, 2014, at 95 years old.
         <strong><em>From Wikipidea</em></strong>
-            <img src="assets/img/pete.jpg" height="70%" width="30%">
-            </p>
+         </p>
         </div>
+        <div class="col-md-3"></div>
+       </div>
+      </div>
+            <img src="assets/img/pete.jpg" height="70%" width="30%">
+            <div class="row">
         <div class="thesecondfounderofkfc">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
         <h3>The Second Founder Of KFC</h3>
         <p>
          His name is Colonel Sanders.
@@ -46,10 +57,17 @@
             However, he retained control of operations in Canada, and he became a salaried brand ambassador for Kentucky Fried Chicken. 
             In his later years, he became highly critical of the food served by KFC restaurants, as he believed they had cut costs and allowed quality to deteriorate.
             Harland David Sanders was born on September 9, 1890, in a four-room house located 3 miles (5 km) east of Henryville, Indiana.
-        <img src="assets/img/colonel.jpg" height="90%" width="30%">
-            </p>
+        
+         </p>
         </div>
+            <div class="col-md-2"></div>
+       </div>
+      </div>
+            <img src="assets/img/colonel.jpg" height="90%" width="30%">
+            <div class="row">
         <div class="howmanybranchestheyhaveinkenya">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
         <h3>How many branches they have in kenya</h3>
         <p>
         Lavington.
@@ -67,8 +85,15 @@
             Mama ngina.
             Juncktion shoping mall.
             Waiyakiway.
-        <img src="assets/img/klogo.jpg" height="90%" width="40%">
-            </p>    
+         </p>
         </div>
+            <div class="col-md-1"></div>
+       </div>
+      </div>
+     </div>
+        <img src="assets/img/klogo.jpg" height="90%" width="40%">
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery-3.5.1.min.js"></script>
+        <script src="assets/js/popper.min.js"></script>
     </body>
 </html>
