--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <html>
 <head>
-    <title>KFC</title>
+   <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--css files-->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.">
+    <title>KFC</title>
     </head>
-    <body>
+<body>
         <div class="container">
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--header-->
+<div class="row">
     <header>
-        <h1>About KFC</h1>
+        <h1><em>About KFC</em></h1>
         </header>
-            <div class="row">
-        <div class="oneofthefoundersofkfc">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-        <h3>One Of The Founders Of KFC</h3>
+</div>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--One of it founders-->
+<div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-6">
+        <h3><em>One Of The Founders Of KFC</em></h3>
     <p>
+       <em>
         His name is pete harman.
         Leon Weston "Pete" Harman (January 16, 1919 – November 19, 2014) was an American businessman best known for having struck a deal with Colonel Harland Sanders to open the first KFC franchise.
         Located in Salt Lake City, Utah it opened for business in August 1952.
@@ -23,26 +39,26 @@
         Harman's mother died two days after he was born, and his father later married Caroline Hemenway Harman, the widow of Pete's uncle. Harman was a major donor to the construction of the Caroline Hemenway Harman Continuing Education Building at Brigham Young University, named after his step-mother.
         Harman and his wife, Arline, opened their first restaurant, The Do Drop Inn, with two employees in 1941. 
         They had met in the 1930s while both employees at the same restaurant in San Francisco, California, and married in 1938.
-        Harman worked with Colonel Sanders to develop and prepare the KFC system for franchising, working to develop training manuals and product guides. His other claims to fame are the development of the bucket packaging[3] and the emphasis on the "Finger-lickin' good" motto.
-        In 1990 the International Foodservice Manufacturer Association recognized Harman's achievements with its Gold Plate Award. 
-        At the time of the award the Harman Management Corp. of Los Altos, California, employed over 4,000 people and operated 238 KFC stores in four states. 
-        Credit for his success was given to his enlightened practices towards his staff including stock purchase schemes.
-        His original KFC building was demolished in 2004 to make way for a museum and an updated restaurant. 
-        Harman relocated to Los Altos, California as the scope of his business expanded in the 1960s. 
-        He lived there until his death on November 19, 2014, at 95 years old.
-        <strong><em>From Wikipidea</em></strong>
+        Harman worked with Colonel Sanders to develop and prepare the KFC system for franchising, working to develop training manuals and product guides. His other claims to fame are the.
+         </em>
          </p>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-4">
+<img src="assets/img/pete.jpg" height="" width="100%">
        </div>
+        <div class="col-md-1"></div>
       </div>
-            <img src="assets/img/pete.jpg" height="70%" width="30%">
-            <div class="row">
-        <div class="thesecondfounderofkfc">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-        <h3>The Second Founder Of KFC</h3>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--The Second Founder Of KFC-->
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-6">
+        <h3><em>The Second Founder Of KFC</em></h3>
         <p>
+        <em>
          His name is Colonel Sanders.
             Born:9 September 1890, Henryville, Indiana, United States
          Died: 16 December 1980, Louisville, Kentucky, United States
@@ -57,18 +73,25 @@
             However, he retained control of operations in Canada, and he became a salaried brand ambassador for Kentucky Fried Chicken. 
             In his later years, he became highly critical of the food served by KFC restaurants, as he believed they had cut costs and allowed quality to deteriorate.
             Harland David Sanders was born on September 9, 1890, in a four-room house located 3 miles (5 km) east of Henryville, Indiana.
-         </p>
+          </em>
+          </p>
         </div>
-            <div class="col-md-2"></div>
+<div class="col-md-4">
+<img src="assets/img/colonel.jpg" height="" width="100%">
+            </div>
+<div class="col-md-1"></div>
        </div>
-      </div>
-            <img src="assets/img/colonel.jpg" height="90%" width="30%">
-            <div class="row">
-        <div class="howmanybranchestheyhaveinkenya">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-        <h3>How many branches they have in kenya</h3>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--How many branches they have in kenya-->
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6">
+        <h3><em>How Many Branches They Have In Kenya and More About Pete Harman</em></h3>
         <p>
+        <em>
         Lavington.
             Kileleshwa.
             Komba market.
@@ -84,15 +107,26 @@
             Mama ngina.
             Juncktion shoping mall.
             Waiyakiway.
+            development of the bucket packaging[3] and the emphasis on the "Finger-lickin' good" motto.
+        In 1990 the International Foodservice Manufacturer Association recognized Harman's achievements with its Gold Plate Award. 
+        At the time of the award the Harman Management Corp. of Los Altos, California, employed over 4,000 people and operated 238 KFC stores in four states. 
+        Credit for his success was given to his enlightened practices towards his staff including stock purchase schemes.
+        His original KFC building was demolished in 2004 to make way for a museum and an updated restaurant. 
+        Harman relocated to Los Altos, California as the scope of his business expanded in the 1960s. 
+        <strong><em>From Wikipidea</em></strong>
+         </em>
          </p>
         </div>
-            <div class="col-md-1"></div>
+    <div class="col-md-4">
+<img src="assets/img/klogo.jpg" height="" width="100%">
+           </div>
+    <div class="col-md-1"></div>
        </div>
+<!--space-->
+<div class="row">
+<br>
+</div>
       </div>
-     </div>
-        <img src="assets/img/klogo.jpg" height="90%" width="40%">
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/jquery-3.5.1.min.js"></script>
-        <script src="assets/js/popper.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
